crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_nested_blocks-4.snap
---
source: crates/syntax/src/parser/tests.rs
expression: "(result, parser.errors)"
---
(
    Ok(
        Block {
            items: [
                Block {
                    items: [],
                    last: Some(
                        Int {
                            value: 0,
                        },
                    ),
                },
                Block {
                    items: [],
                    last: Some(
                        Int {
                            value: 1,
                        },
                    ),
                },
            ],
            last: None,
        },
    ),
    [],
)
