crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_nested_blocks.snap
---
source: crates/syntax/src/parser/tests.rs
expression: result
---
Ok(
    Block {
        items: [],
        last: Some(
            Block {
                items: [],
                last: Some(
                    Int {
                        value: 0,
                    },
                ),
            },
        ),
    },
)
