crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_stmt_let-11.snap
---
source: crates/syntax/src/parser/tests.rs
expression: module
---
Module {
    imports: [],
    symbols: Symbols {
        fns: {},
        classes: {},
        traits: {},
        aliases: {},
    },
    top_level: [
        Let {
            name: "v",
            ty: None,
            value: GetIndex {
                opt: false,
                target: GetVar {
                    name: "v",
                },
                key: Range {
                    start: Int {
                        value: 0,
                    },
                    end: Int {
                        value: 512,
                    },
                },
            },
        },
    ],
}
