crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_stmt_let-3.snap
---
source: crates/syntax/src/parser/tests.rs
expression: result
---
Ok(
    Module {
        imports: [],
        symbols: Symbols {
            fns: {},
            classes: {},
            traits: {},
            aliases: {},
        },
        top_level: [
            Let {
                name: "v",
                ty: None,
                value: Float {
                    value: 0.0,
                },
            },
        ],
    },
)
