crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_stmt_let-4.snap
---
source: crates/syntax/src/parser/tests.rs
expression: result
---
(
    Module {
        imports: [],
        symbols: Symbols {
            fns: {},
            classes: {},
            traits: {},
            aliases: {},
        },
        top_level: [
            Let {
                name: "v",
                ty: None,
                value: Bool {
                    value: true,
                },
            },
        ],
    },
    [],
)
