crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_stmt_let-6.snap
---
source: crates/syntax/src/parser/tests.rs
expression: result
---
(
    Module {
        imports: [],
        symbols: Symbols {
            fns: {},
            classes: {},
            traits: {},
            aliases: {},
        },
        top_level: [
            Let {
                name: "v",
                ty: None,
                value: Tuple {
                    fields: [
                        GetVar {
                            name: "v",
                        },
                    ],
                },
            },
        ],
    },
    [],
)
