crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_stmt_let-7.snap
---
source: crates/syntax/src/parser/tests.rs
expression: result
---
Ok(
    Module {
        imports: [],
        symbols: Symbols {
            fns: {},
            classes: {},
            traits: {},
            aliases: {},
        },
        top_level: [
            Let(
                Let {
                    name: "v",
                    ty: None,
                    value: Literal(
                        Tuple(
                            Tuple {
                                fields: [
                                    GetVar(
                                        GetVar {
                                            name: "v",
                                        },
                                    ),
                                    GetVar(
                                        GetVar {
                                            name: "v",
                                        },
                                    ),
                                ],
                            },
                        ),
                    ),
                },
            ),
        ],
    },
)
